--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -1,5 +1,18 @@
 body {
-    color: deepskyblue;
+    color: black;
     text-align: center;
     font-family: "Arial";
+    font-size: 16px; 
+}
+#container
+ {
+    width: 70%; 
+    padding: 1em; 
+    text-align: center;
+    border: 1px solid #ddd; 
+    margin: 10 auto; 
+}
+#container h1 
+{
+    font-size: 20px; 
 }
